xee-xpath/tests/snapshots/xpath__keyword_qname_self.snap
---
source: xee-xpath/tests/xpath.rs
assertion_line: 1371
expression: "run_xml_with_ns(r#\"<data xmlns:ex=\"http://example.com/ex\"><ex:self>found it</ex:self></data>\"#,\n\"//ex:self/string()\", &[(\"ex\", \"http://example.com/ex\")])"
---
Ok(
    One(
        One {
            item: Atomic(
                String(
                    String,
                    "found it",
                ),
            ),
        },
    ),
)
