xee-xpath/tests/snapshots/xpath__let_uses_own_variable.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"let $x := $x return $x\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPST0008,
            message: Some(
                "Name not defined.",
            ),
        },
        span: Some(
            SourceSpan(
                10,
                12,
            ),
        ),
    },
)
