xee-xpath/tests/snapshots/xpath__sequence_predicate_sequence_too_long.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[(2, 3)]\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPTY0004,
            message: None,
        },
        span: Some(
            SourceSpan(
                10,
                16,
            ),
        ),
    },
)
